1.0.13:
Sam Lantinga - Sat Apr 28 15:48:27 PDT 2001
 * Don't pay attention to username and password in preferred urls
Sam Lantinga - Sat Apr 28 15:18:34 PDT 2001
 * Fixed crash when saving mirror while downloading multiple patches

1.0.12:
Sam Lantinga - Wed Apr 11 15:22:15 PDT 2001
 * Added a dynamically linked GTk user interface module as default
 * Added a --ui command line option to specify a UI loadable module

1.0.11:
Sam Lantinga - Wed Apr 11 15:22:15 PDT 2001
 * Separated user interface into loadable modules

1.0.10:
Sam Lantinga - Wed Apr  4 09:53:35 PDT 2001
 * You can pass an install directory as well as product on the command line
Sam Lantinga - Wed Apr  4 09:05:02 PDT 2001
 * Added multi-language detection for Heretic II
Sam Lantinga - Thu Mar  8 15:06:24 PST 2001
 * Fixed setting the temporary download path
Sam Lantinga - Thu Mar  8 14:56:22 PST 2001
 * Always use the effective user id for the home directory

1.0.9:
Sam Lantinga - Mon Feb 19 22:45:23 PST 2001
 * Perform updates fully automated when doing auto-updates

1.0.8
Sam Lantinga - Mon Feb 19 19:58:46 PST 2001
 * Fixed memory corruption with certain password protected URLs
Sam Lantinga - Thu Feb 15 18:14:17 PST 2001
 * Added a reminder to update setup.xml to the Makefile install rule
 * The url specified with --update_url applies to updating loki_update

1.0.7:
Sam Lantinga - Tue Feb 13 18:55:03 PST 2001
 * Added terminal-mode auto-update capability.
Sam Lantinga - Tue Feb 13 16:01:57 PST 2001
 * Write the home directory of the effective uid, so sudo works correctly.
Sam Lantinga - Tue Feb 13 15:47:20 PST 2001
 * The updater now prefers local disk files to mirrors.
Sam Lantinga - Tue Feb 13 14:38:51 PST 2001
 * Show the size of each update as a tooltip message.
Sam Lantinga - Tue Feb 13 13:34:28 PST 2001
 * Correct the --tmppath command line usage message.
 * Pass --honor-http-proxy to gpg when downloading GPG keys.

1.0.6:
Sam Lantinga - Thu Dec  7 18:30:19 PST 2000